# project-cvb

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml
notebooks/: README.md  gen_ai_chat.ipynb  gen_ai_embeddings.ipynb  gen_ai_img_to_text.ipynb  gen_ai_text_to_text.ipynb
project_ai_gemini/config/: settings.py
project_cvb/app/api/: __init__.py
project_cvb/app/api/v1/: __init__.py  users.py
project_cvb/app/api/v2/: __init__.py  users.py
project_cvb/app/models/: attendance.py  employee.py
project_cvb/app/scripts/: hello_world.py
project_cvb/config/: mongodb_config.py  settings.py
project_cvb/scripts/: 01_function_calling.py  02_function_calling.py  03_ollama_start1.py  04_ollama_start2.py  05_sentence_sentiment.py  06_pdf_rag.py  06_pdf_rag_sample_create_vector_store.py  06_pdf_rag_sample_prompt_response.py  06_pdf_rag_streamlit.py  07_streamlit_basic.py  hello_world.py  mcp_server1.py  t11_generate_attendance.py  t11_streamlit_attendance_server.py  t12_streamlit_mcp_server.py
project_cvb/scripts/pages/: t11_aggregated_attendance.py
project_cvb/scripts/pages2/: t11_aggregated_attendance.py  t11_attendance_agent.py
