[tool.poetry]
authors = ["prasannaboga"]
description = ""
name = "project-cvb"
packages = [{include = "project_cvb"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
black = "24.10.0"
fastapi = "0.115.6"
google-cloud-aiplatform = "1.75.0"
google-generativeai = "0.8.3"
ipykernel = "6.29.5"
ipywidgets = "8.1.5"
mongoengine = "0.29.1"
openai = "1.58.1"
pillow = "11.0.0"
pydantic = "2.10.4"
pydantic-settings = "2.7.0"
pymongo = "4.10.1"
python = "3.13.0"
python-dotenv = "1.0.1"
uvicorn = "0.34.0"

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.poetry.scripts]
01_function_calling = "project_cvb.scripts.01_function_calling:main"
02_function_calling = "project_cvb.scripts.02_function_calling:main"
hello_world = "project_cvb.scripts.hello_world:main"

[tool.custom_settings]
new_key1 = "new_value1"

[tool.pydantic-settings]
new_key = "new_value"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
